# ResearchGeek

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: code_researcher.py  paper_researcher.py  planner.py  writer.py
backend/app/api/: code_research_route.py  health_route.py  paper_research_route.py  planner_route.py  workflow.py
backend/app/core/: config.py  logger.py
backend/app/mcp/: servers.py
backend/app/models/: research_model.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Hero.tsx  HistoryPanel.tsx  LoadingTimeline.tsx  Navbar.tsx  Report.tsx  ResearchFindings.tsx  SearchBox.tsx
frontend/src/lib/: axios.ts
frontend/src/services/: workflow.ts
frontend/src/store/: researchStore.ts
frontend/src/types/: research.ts
