[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv-mcp-server>=0.5.0",
    "fastapi>=0.118.3",
    "openai-agents>=0.3.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
